2014-02-28  Holger Seelig  <holger.seelig@yahoo.de>

	* GeoCoordinate.wrl: 

2014-02-28  Holger Seelig  <holger.seelig@yahoo.de>

	* GeoCoordinate.wrl: 

2014-02-28  Holger Seelig  <holger.seelig@yahoo.de>

	* GeoCoordinate.wrl:
	* OrthoViewpoint.wrl: 

2014-02-26  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* GeoElevationGrid.wrl: 

2014-02-25  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* root.wrl:
	* child4.wrl:
	* child3.wrl:
	* GeoLOD.wrl:
	* child1.wrl:
	* child2.wrl: 

2014-02-25  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* GeoCoordinate.wrl: 

2014-02-25  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* StaticGroup.wrl: 

2014-02-19  Holger Seelig  <holger.seelig@yahoo.de>

	* ScreenFontStyle.wrl: 

2014-02-18  Holger Seelig  <holger.seelig@yahoo.de>

	* Text.wrl:
	* ScreenFontStyle.wrl: 

2014-02-18  Holger Seelig  <holger.seelig@yahoo.de>

	* Text.wrl:
	* ScreenFontStyle.wrl: 

2014-02-18  Holger Seelig  <holger.seelig@yahoo.de>

	* Text.wrl: 

2014-02-18  Holger Seelig  <holger.seelig@yahoo.de>

	* Text.wrl:
	* ScreenFontStyle.wrl: 

2014-02-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Text.wrl: 

2014-02-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Text.wrl:
	* ScreenFontStyle.wrl: 

2014-02-14  Holger Seelig  <holger.seelig@yahoo.de>

	* ScreenFontStyle.wrl: 

2014-02-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Text.wrl:
	* Rain.wrl: 

2014-02-13  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-02-12  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* vertabrae.wrl: 

2014-02-11  Holger Seelig  <holger.seelig@yahoo.de>

	* ChangeLog:
	* TwoSidedMaterial.wrl:
	* Wheel.wrl:
	* PlaneSensor.wrl:
	* CylinderSensor.wrl: 

2014-02-09  Holger Seelig  <holger.seelig@yahoo.de>

	* PlaneSensor.wrl: 

2014-02-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Wheel.wrl:
	* CylinderSensor.wrl: 

2014-02-08  Holger Seelig  <holger.seelig@yahoo.de>
