@@ -8,6 +8,10 @@
 
 2014-02-28  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* GeoCoordinate.wrl: 
+
+2014-02-28  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* GeoCoordinate.wrl:
 	* OrthoViewpoint.wrl: 
 
